:lipstick: style: 根据 check style 调整代码规范问题